fix: reduce neutral color contrast

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,7 +11,7 @@
     --font-mono: "Space Mono", "Fira Code", "Courier New", monospace;
 
     --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
+    --foreground: 0 0% 5%;
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
@@ -37,8 +37,8 @@
     --radius: 0.5rem;
   }
   .dark {
-    --background: 0 0% 2%;
-    --foreground: 0 0% 98%;
+    --background: 0 0% 6%;
+    --foreground: 0 0% 80%;
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
     --popover: 0 0% 3.9%;
